fixed styles and image not showing

--- a/styles2.css
+++ b/styles2.css
@@ -49,7 +49,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
 }
 
 
